express js hello world response

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/SimonGHTang/express-hello-world/issues"
   },
-  "homepage": "https://github.com/SimonGHTang/express-hello-world#readme"
+  "homepage": "https://github.com/SimonGHTang/express-hello-world#readme",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
